# lxup

./: .gitignore  README.md  bootstrap-codex.bat  bootstrap-hermes.bat  bootstrap-openclaw.bat  start-all.bat  start-hermes.bat  stop-all.bat
ai-assistant/: .env.example  README.md  index.html  server.js  start.bat
control-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
control-ui/public/data/: skill-packs.json
control-ui/scripts/: gen-skillpack-catalog.mjs
control-ui/src/: app.ts  env.d.ts  main.ts  styles.css
control-ui/src/components/: icons.ts  oc-badge.ts  oc-btn.ts  oc-card.ts  oc-dialog.ts  oc-empty.ts  oc-section.ts  oc-stat-card.ts  oc-styles.css  oc-toast.ts  oc-toggle.ts  page-header.ts  sidebar.css  sidebar.ts  skillpack-panel.ts
control-ui/src/i18n/: index.ts
control-ui/src/pages/: agents-page.ts  ai-page.ts  (+30 more)
data/: license.db
docs/: hermes-0.18.2-cors-streaming.patch  hermes-cors-fix-PR.md  方案.md
license_server/: config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  start.bat
license_server/routes/: activate.py  admin.py  admin_ui.py  validate.py
scripts/: apply_hermes_patches.py
sidecar/: config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
sidecar/routes/: codex.py  gateway_routes.py  health.py  hermes.py  license.py  weixin_login_routes.py
sidecar/services/: codex_manager.py  gateway_manager.py  hermes_manager.py  license.py  skills_scan.py  weixin_login.py
skill-packs/: .gitattributes  51-posts.json  76-posts.json  README.md  manifest.json
(+561 files in other folders)
