[project]
name = "license-server"
version = "0.1.0"
description = "软件激活码校验服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
license-server = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
